# agents

./: .gitignore  AGENTS.md  AGENT_DONE.md  AGENT_PROMPT.md  AGENT_QUIZ.md  AGENT_QUIZ_ANSWERS.md  AGENT_TODO.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: guidelines-editing.instructions.md  python-framework.instructions.md
config/: projects.json
docs/: boxrunner-guidelines-propagation-summary-2026-06-16.md  boxwalker-agent-quick-start.md  developer-cheatsheet.md  low-token-playbook.md  recent-changes-summary.md
guidelines/base/: AGENTS.md  AGENT_PROMPT.md
guidelines/projects/boxrunner/: AGENTS.md  AGENT_DONE.md  AGENT_PROMPT.md  AGENT_QUIZ.md  AGENT_QUIZ_ANSWERS.md  AGENT_TODO.md
guidelines/projects/boxwalker/: AGENTS.md  AGENT_PROMPT.md  AGENT_QUIZ.md  AGENT_QUIZ_ANSWERS.md
guidelines/projects/deepblue-documents-kube/: AGENTS.md  AGENTS_MERGED.md  AGENT_DONE.md  AGENT_PROMPT.md  AGENT_QUIZ.md  AGENT_QUIZ_ANSWERS.md  AGENT_TODO.md  DEEPBLUE-466-DEV-CALL-CHECKLIST.md  DEEPBLUE-466-DEV-LIVE-TROUBLESHOOTING.md
scripts/: README.md  check_agents_link.py  check_token_budgets.py  flatten_project_files.py  ollama_pr_draft.py  ollama_prompt_compress.py  prompt_from_git.py  smoke_run.sh
src/agents_framework/: __init__.py  cli.py  config.py  framework.py  guidelines.py  merge.py  prompts.py  sync_base.py  validate.py
tests/: test_agents_link_script.py  test_extended.py  test_framework.py  test_guidelines.py  test_ollama_scripts.py  test_prompt_from_git.py  test_prompts.py  test_sync_base.py  test_token_guardrails.py
(+63 files in other folders)
