[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agents-multiproject-framework"
version = "0.1.0"
description = "Lightweight multi-project development framework for mounted repositories"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Local Developer" }
]
dependencies = []

[project.scripts]
agentsfw = "agents_framework.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

